--- a/portal-de-noticias/styles/sections.css
+++ b/portal-de-noticias/styles/sections.css
@@ -1,176 +1,253 @@
-@media screen and (min-width: 1280px) {
-
-    main {
-        grid-template-rows: auto;
-    }
-
-    #featured {
-        grid-area: featured;
-
-        img {
-            height: 100%;
-            object-fit: cover;
-            
-        }
-
-        .card {
-            border-radius: 0.25rem;
-            overflow: hidden;
-
-            position: relative;
-            /* & substitui o .card::before */
-            &::before {
-                content: "";
-                position: absolute;
-                inset: 0;
-                top: 50%;
-                background: linear-gradient(
-                    180deg, 
-                    transparent 0%,
-                    #020617 100%
-                );
-            }
-
-            figcaption {
-                position: absolute;
-                bottom: 0;
-
-                padding: 1.5rem;
-
-                &:has(.text-lg) {
-                    padding: 0.75rem;
-                }
-                
-                h2 {
-                    margin-top: 0.5rem;
-
-                    display: -webkit-box; /* Define um contêiner flexível para texto */
-                    -webkit-box-orient: vertical; /* Orientação vertical */
-                    -webkit-line-clamp: 3; /* Limita a 3 linhas */
-                    line-clamp: 3;
-                    overflow: hidden; /* Esconde o excesso de texto */
-                    text-overflow: ellipsis; /* Adiciona "..." no final */
-                }
-            }
-        }
-    }
-
-    #weekly {
-
-        grid-area: weekly;
-
-        & > div {
-            grid-template-columns: repeat(4, 18.25rem);
-        } 
-
-        img {
-            height: 10rem;   
-        }
-
-        figure {
-            position: relative;
-
-            .content-tag {
-                position: absolute;
-                top: 0.5rem;
-                left: 0.5rem;
-            }
-
-            p {
-                margin-top: 0.5rem;
-                font-weight: 800;
-
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
-                line-clamp: 3;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-        }
-    }
-
-    #ai {
-
-        grid-area: ai;
-
-        img {
-            width: 11rem;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-        }
-
-        h3 {
-            margin-block: 0.5rem 0.25rem;
-
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
-            line-clamp: 2;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        p {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 4;
-            line-clamp: 4;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    }
-
-    aside {
-        grid-area: aside;
-    }
-
-    #more {
-        article {
-            margin-bottom: 2rem;
-        }
-
-        margin-top: 2rem;
-
-        div h3 {
-            margin-top: 0.5rem;
-            font: var(--text-extra);
-
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
-            line-clamp: 2;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        img {
-            width: 4.5rem;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-        }
-    }
+section > header {
+    max-width: 80rem;
 }
 
 section header {
     border-top: 1px solid var(--stroke-color);
     padding-block: 0.75rem 1.5rem;
     font: var(--text-span);
+}
 
-    
-    a {
-        justify-self: end;
-        align-items: center;
-        gap: 0.5rem;
+section header a {
+    justify-self: end;
+    align-items: center;
+    gap: 0.5rem;
+}
 
-        span {
-            background-image: url(../assets/icons/ArrowRight.svg);
-            width: 1rem;
-            height: 1rem;
-        }
+section header a span {
+    background-image: url(../assets/icons/ArrowRight.svg);
+    width: 1rem;
+    height: 1rem;
+}
 
-        &:hover span {
-            background-image: url(../assets/icons/ArrowRight-hover.svg);
-        }
+section header a:hover span {
+    background-image: url(../assets/icons/ArrowRight-hover.svg);
+}
+
+#featured img {
+    height: 100%;
+    object-fit: cover;
+    border-radius: .25rem;
+}
+
+#featured .card {
+    border-radius: 0.25rem;
+    overflow: hidden;
+
+    position: relative;
+}
+
+/* & substitui o .card::before */
+#featured .card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    top: 50%;
+    background: linear-gradient(
+        180deg, 
+        transparent 0%,
+        #020617 100%
+    );
+}
+
+#featured figcaption {
+    position: absolute;
+    bottom: 0;
+
+    padding: 1.5rem;
+}
+
+#featured figcaption:has(.text-lg) {
+    padding: 0.75rem;
+}
+
+#featured figcaption h2 {
+    margin-top: 0.5rem;
+
+    display: -webkit-box; /* Define um contêiner flexível para texto */
+    -webkit-box-orient: vertical; /* Orientação vertical */
+    -webkit-line-clamp: 3; /* Limita a 3 linhas */
+    line-clamp: 3;
+    overflow: hidden; /* Esconde o excesso de texto */
+    text-overflow: ellipsis; /* Adiciona "..." no final */
+}
+
+/*
+#weekly img {
+    height: 10rem;
+}
+*/
+
+#weekly > div {
+    grid-template-columns: auto;
+}
+
+#weekly figure {
+    position: relative;
+}
+
+#weekly figure .content-tag {
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+}
+
+#weekly figure p {
+    margin-top: 0.5rem;
+    font-weight: 800;
+
+    display: -webkit-box; /* Define um contêiner flexível para texto */
+    -webkit-box-orient: vertical; /* Orientação vertical */
+    -webkit-line-clamp: 3; /* Limita a 3 linhas */
+    line-clamp: 3;
+    overflow: hidden; /* Esconde o excesso de texto */
+    text-overflow: ellipsis; /* Adiciona "..." no final */
+}
+
+#ai h3 {
+    margin-block: 0.5rem 0.25rem;
+
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    -webkit-line-clamp: 2; 
+    line-clamp: 2;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+}
+
+#ai p {
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    -webkit-line-clamp: 4; 
+    line-clamp: 4;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+}
+
+#more article {
+    margin-bottom: clamp(0.5rem, 50%, 1.1rem);
+}
+
+
+/* 375px = 23.4375em */    
+/* 600px = 37.5em */
+/* 768px = 48em */
+/* 992px = 62em */
+
+@media (width <= 37.5em) {
+    section {
+        padding-inline: 1rem;
+    }
+
+    #featured {
+        grid-auto-flow: row;
+        grid-template-rows: 26rem 1fr;
+        grid-template-columns: auto;
+    }
+
+    .grid-cols-2 {
+        grid-template-columns: auto;
+    }
+
+    #featured figure > figcaption {
+        padding-left: 1rem;
+    }
+
+    #ai article img {
+        width: 100%; /* Mantém um tamanho proporcional */
+        max-width: 300px; /* Limita o tamanho máximo */
+        aspect-ratio: 16 / 9; /* Proporção de retrato (16:9) */
+        object-fit: cover; /* Garante que a imagem não deforme */
+        border-radius: 0.5rem; 
+    }
+
+    #ai article {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #ai article > div {
+        margin-inline: auto;
+    }
+
+    #ads {
+        margin-top: 1rem;
+    }
+
+    #more {
+        margin-block: 2rem;
+    }
+
+    #more img {
+        width: 5rem;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    #more span {
+        font-size: 0.78rem;
+    }
+
+    #more h3 {
+        font-size: 1rem;
+        margin-top: 0.5rem;
+        display: -webkit-box; 
+        -webkit-box-orient: vertical; 
+        -webkit-line-clamp: 2; 
+        line-clamp: 2;
+        overflow: hidden; 
+        text-overflow: ellipsis; 
     }
 }
+
+@media (37.5em < width < 62em) {
+    section {
+        padding-inline: 1rem;
+    }
+
+    #featured {
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media (48em < width < 62em) {   
+    #ai p {
+        -webkit-line-clamp: 2;
+        line-clamp: 2; 
+    }
+}
+
+@media (width >= 37.5em) {
+    /* 18.25rem*/
+    #weekly > div {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    
+    #ai article img {
+        width: 11rem;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    #more {
+        margin-top: 2rem;
+    }
+
+    #more h3 {
+        margin-top: 0.5rem;
+
+        display: -webkit-box; 
+        -webkit-box-orient: vertical; 
+        -webkit-line-clamp: 2; 
+        line-clamp: 4;
+        overflow: hidden; 
+        text-overflow: ellipsis; 
+    }
+
+    #more img {
+        width: 5rem;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+}
+
