--- a/formulario-de-convite/styles/inputs.css
+++ b/formulario-de-convite/styles/inputs.css
@@ -6,10 +6,18 @@ main h3 {
     font: var(--h-sm);
 }
 
+.main-container > h2 {
+    margin-bottom: 2.5rem;
+}
+
 fieldset {
     border: none;
     display: grid;
     gap: 1.5rem;
+}
+
+legend {
+    margin-bottom: 1.5rem;
 }
 
 legend .flex {
@@ -19,4 +27,38 @@ legend .flex {
 legend .flex img {
     width: 1.5rem;
     height: 1.5rem;
+}
+
+input, textarea {
+    appearance: none;
+
+    width: 100%;
+    border-radius: 0.5rem;
+    border: 2px solid transparent;
+    background-color: var(--input-base);
+    outline: 1px solid var(--input-stroke);
+
+    padding: 0.75rem 1rem;
+    font: var(--text-md);
+    color: var(--input-placeholder);
+}
+
+label {
+    font: var(--text-sm);
+    color: var(--text-body);
+
+    display: block;
+    margin-bottom: 1rem;
+}
+
+input:focus,
+textarea:focus,
+input[type="datetime-local"]:focus-within {
+    outline: .125rem solid var(--brand-light);
+    border-color: var(--input-stroke);
+    outline-offset: .1px;
+}
+
+div.date-event > div {
+    width: 100%;
 }
