--- a/formulario-de-convite/styles/layout.css
+++ b/formulario-de-convite/styles/layout.css
@@ -10,6 +10,7 @@
     aside figcaption::before {
         content: "";
         position: absolute;
+        border-radius: 0.75rem;
         inset: 0;
         z-index: -1;
         bottom: 50%;
@@ -56,6 +57,8 @@
         padding-block: var(--py-main);
         padding-inline: var(--px-main);
         overflow-y: auto;
+        border-radius: 0.75rem;
+        margin-block: 1.5rem;
         border: 2px solid red;
     }
 }
