--- a/formulario-de-convite/styles/inputs.css
+++ b/formulario-de-convite/styles/inputs.css
@@ -62,3 +62,78 @@ input[type="datetime-local"]:focus-within {
 div.date-event > div {
     width: 100%;
 }
+
+.radio-wrapper {
+    max-width: 100%;
+    height: 3.2rem;
+    border: 1px solid var(--input-stroke);
+    border-radius: 0.5rem;
+    padding: 0.2rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.3rem;
+    background-color: var(--input-base); /* fundo padrão escuro */
+}
+
+.radio-box {
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    gap: 0.4rem;
+    padding: 0.5rem;
+    background-color: 2px solid transparent;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: all 0.3s;
+    text-align: center;
+    background-color: var(--input-base);
+  }
+  
+  /* Oculta o input radio */
+  .radio-box input[type="radio"] {
+    display: none;
+  }
+
+  .radio-box div.presential-image,
+  .radio-box div.online-image,
+  .radio-box input[type="radio"]:checked ~ div.presential-image,
+  .radio-box input[type="radio"]:checked ~ div.online-image {
+    width: 1.3rem;
+    height: 1.3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    transition: background-image 0.3s ease;
+  }
+  
+  .radio-box div.presential-image {
+    background-image: url(../assets/icons/presencial.svg);
+  }
+
+  .radio-box div.online-image {
+    background-image: url(../assets/icons/video.svg);
+  }
+  
+  .radio-box span {
+    font-size: 0.875rem;
+    color: var(--text-body);
+    transition: color 0.3s ease;
+  }
+
+  .radio-box input[type="radio"]:checked ~ span {
+    color: var(--text-heading);
+  }
+
+  .radio-box input[type="radio"]:checked ~ div.presential-image {
+    background-image: url(../assets/icons/presencial-hover.svg);
+  }
+
+  .radio-box input[type="radio"]:checked ~ div.online-image {
+    background-image: url(../assets/icons/video-hover.svg);
+  }
+ 
+ /* Estiliza o label (radio-box) que CONTÉM um input selecionado */
+.radio-box:has(input:checked) {
+    background-color: var(--input-stroke); /* fundo mais claro */
+    border: 1px solid var(--input-stroke); /* borda quando selecionado */
+  }
