--- a/formulario-de-convite/styles/layout.css
+++ b/formulario-de-convite/styles/layout.css
@@ -1,7 +1,30 @@
-@media (width <= 80em) {
+@media (width <= 37.5em) {
     aside figure {
         height: 40rem;
         background: url(../assets/Background.png) no-repeat center bottom/cover;
+        
+        position: relative;
+        z-index: 0;
+    }
+
+    main {
+        padding: clamp(1.5rem, 1rem + 2vw, 5rem);
+    }
+
+    div.date-event {
+        flex-wrap: wrap;
+    }
+
+    div.info {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
+
+@media (37.5em < width < 80em) {
+    aside figure {
+        height: 40rem;
+        background: url(../assets/Background-mobile.png) no-repeat center bottom/contain;
         
         position: relative;
         z-index: 0;
@@ -13,7 +36,7 @@
         border-radius: 0.75rem;
         inset: 0;
         z-index: -1;
-        bottom: 50%;
+        bottom: 40%;
         background: linear-gradient(
             180deg, 
             #131516 50%,
@@ -22,11 +45,11 @@
     }
 
     main {
-        padding: 1.5rem;
+        padding: clamp(1.5rem, 1rem + 2vw, 5rem);
     }
 }
 
-@media (width >= 48em) {
+@media (width >= 54.25em) {
     #app {
         grid-template-columns: 31.25% 68.75%;
 
@@ -43,14 +66,6 @@
         height: 45.5rem;
         border-radius: 0.75rem;
         background: url(../assets/Background.png) no-repeat center/cover;
-    }
-
-    aside figcaption::before {
-        background: linear-gradient(
-            180deg, 
-            #131516 0%,
-            transparent 100%
-        );
     }
 
     main {
