--- a/pagina-de-receita/styles/index.css
+++ b/pagina-de-receita/styles/index.css
@@ -1,3 +1,128 @@
-@import url(global.css);
-@import url(mobile.css);
-@import url(desktop.css);
+@charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+:root {
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573A37;
+
+    --bg-main: hsl(50, 61%, 85%);
+    --h1: 800 2rem/140% "Alice", serif;
+    --h2: 600 1.2rem/150% "Alice", serif;
+}
+
+body {
+    width: 100vw;
+    min-height: 100vh;
+    background-color: var(--bg-main);
+}
+
+.flex {
+    display: flex;
+}
+
+h1 {
+    font: var(--h1);
+}
+
+h2 {
+    font: var(--h2);
+}
+
+h1, h2 {
+    color: #291B1A;
+    margin-bottom: 0.25rem;
+}
+
+img {
+    width: 100%;
+    display: block; /* remove espaço indesejado abaixo da imagem */
+}
+
+article#page {
+    width: 100vw;
+}
+
+main {
+    padding: 1.5rem;
+}
+
+section + section {
+    margin-top: 1.5rem;
+}
+
+section#about p + p {
+    margin-top: 0.75rem;
+}
+
+ul {
+    padding-left: 1.5rem;
+}
+
+section#preparation p + p{
+    padding-top: 1rem;
+}
+
+footer {
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1rem;
+    color: #291B1A;
+}
+
+a {
+    color: #ad847f;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #533d3a;
+    text-decoration: underline;
+}
+
+footer img {
+    display: none;
+    width: 1rem;
+}
+
+@media (width >= 53.125em) {
+    :root {
+        --h1: 800 2.5rem/140% "Alice", serif;
+        --h2: 600 1.5rem/150% "Alice", serif;
+    }
+
+    body {
+        background: url(../assets/imagens/background.jpg) no-repeat center/cover;
+    }
+
+    article#page {
+        max-width: 50rem;
+        height: auto;
+        background-color: var(--bg-main);
+        border-radius: 1.5rem;
+        margin: 3rem auto 1.75rem;
+        padding: 1.5rem;
+    }
+
+    figure {
+        border-radius: 1rem;
+        overflow: hidden;
+    }
+
+    footer {
+        color: #F0E8C2;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 3rem;
+    }
+
+    footer img {
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
