--- a/formulario-de-convite/styles/index.css
+++ b/formulario-de-convite/styles/index.css
@@ -1,4 +1,4 @@
 @import url(global.css);
 @import url(layout.css);
-@import url(inputs.css);
-@import url(customize.css);
+@import url(aside.css);
+@import url(forms.css);
