--- a/formulario-de-convite/styles/fields/customize.css
+++ b/formulario-de-convite/styles/fields/customize.css
@@ -64,12 +64,12 @@
 
 .theme-container {
     overflow: hidden;
-    padding-block: 0.1rem;
-    grid-template-columns: repeat(auto-fit, minmax(8.375rem, 1fr)); 
+    padding: 0.1rem;
+    grid-template-columns: repeat(auto-fit, minmax(8.275rem, 1fr)); 
 }
 
 .theme-container .card {
-    width: 8.375rem;
+    width: 8.275rem;
     height: 6.4375rem;
     text-align: center;
     color: var(--text-heading);
@@ -85,7 +85,7 @@
 }
 
 .card img {
-    width: 7.875rem;
+    width: 7.775rem;
     height: 4rem;
     border-radius: 0.5rem;
     margin-top: 0.1875rem;
@@ -95,4 +95,94 @@
     display: block;
     font-weight: 400;
     margin-top: 0.1875rem;
+}
+
+.radio-wrapper:has(.checkbox-container) {
+    align-items: center;
+}
+
+.checkbox-inner {
+    width: 11rem;
+    align-items: center;
+}
+
+#checkbox-track {
+    position: relative;
+    margin: 0;
+    width: 4rem;
+    height: 2rem;
+}
+
+#checkbox-track input[type="checkbox"] {
+    outline: none;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    background-color: var(--input-base);
+    border: 1px solid var(--input-stroke);
+    border-radius: 30rem;
+    cursor: pointer;
+
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+#checkbox-track input[type="checkbox"]::before {
+    content: "";
+    position: absolute;
+    width: 1.5rem;
+    height: 1.5rem;
+    top: 0.20rem;
+    left: 0.20rem;
+    border-radius: 50%;
+    background-color: var(--input-stroke);
+
+    transition: all 0.3s ease;
+}
+
+#checkbox-track input[type="checkbox"]:checked {
+    background-color: var(--brand-light);
+    border: 1px solid var(--brand-light);
+}
+
+#checkbox-track input[type="checkbox"]:checked::before {
+    background-color: var(--text-heading);
+    transform: translateX(1.9rem);
+}
+
+.checkbox-inner span {
+    color: var(--text-heading);
+}
+
+.dropzone {
+    width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.dropzone p {
+    font: var(--ff-text);
+    margin-inline: 1rem;
+}
+
+.drop-button {
+    display: flex;
+    align-items: center;
+    background-color: var(--shape-button);
+    color: var(--text-heading);
+    padding: 1rem;
+    border-radius: 0.5rem ;
+}
+
+.drop-button svg {
+    width: 1rem;
+    height: 1rem;
+}
+
+.dropzone input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    opacity: 0;
 }
