--- a/snitap/styles/header.css
+++ b/snitap/styles/header.css
@@ -1,7 +1,8 @@
-header nav {
+nav {
     max-width: 80rem;
     width: 100%;
     padding: 1.25rem 2rem;
+    margin-inline: auto;
 
     display: flex;
     justify-content: space-between;
