--- a/snitap/styles/header.css
+++ b/snitap/styles/header.css
@@ -25,11 +25,11 @@ img[src*="shopping"]:hover {
     transform: rotate(-30deg);
 }
 
-a {
+nav a {
     position: relative;
 }
 
-a > span {
+nav a > span {
     font: 500 0.75rem/1.3 "Inter", sans-serif ;
 
     position: absolute;
