--- a/snitap/styles/hero.css
+++ b/snitap/styles/hero.css
@@ -1,5 +1,3 @@
-
-
 section.hero {
     max-width: 80rem;
     width: 100%;
@@ -35,6 +33,48 @@ h1 span:nth-child(3) {
 h1 span {
     display: block;
     animation: slideUp 6s infinite ease;
+}
+
+/* buttons */
+.hero .buttons {
+    gap: 2rem;
+    margin-top: 3rem;
+}
+
+.hero .button {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+
+    max-width: 17.75rem;
+    height: 4.5rem;
+    border-radius: 5rem;
+
+    transition: scale 350ms;
+}
+
+.hero .buy {
+    padding: 0.75rem 1.5rem;
+    background-color: var(--snitap-sun);
+}
+
+.hero .play span {
+    display: flex;
+    padding: 1.5rem;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.hero .shadow {
+    box-shadow: 
+    0 2px 5px rgb(0 0 0 / .1),
+    0 9px 9px rgb(0 0 0 / .09),
+    0 20px 12px rgb(0 0 0 / .05),
+    0 36px 15px rgb(0 0 0 / .01);
+}
+
+.hero .button:hover {
+    scale: 1.1;
 }
 
 @keyframes slideUp {
@@ -109,7 +149,17 @@ h1 span {
     }
 }
 
-@media (width >= 80rem) {
+@media (width < 37.5em) {
+    .hero h1 {
+        max-width: 20rem;
+    }
+    .hero .buttons {
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+    }
+}
+
+@media (width >= 37.5rem) {
     section.hero {
         padding: 2.5rem 2rem;
     }
@@ -126,6 +176,10 @@ h1 span {
     h1 span {
         display: block;
         animation: slideUp 6s infinite ease;
+    }
+
+    .hero .button.buy {
+        padding: 1.5rem 3rem;
     }
 
     @keyframes slideUp {
