--- a/travelgram/styles/header.css
+++ b/travelgram/styles/header.css
@@ -1,73 +1,125 @@
-@media screen and (min-width: 992px) {
-    header .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #info {
-        width: 17.5rem; /* 280px */
-    }
-
-    header #info-mobile {
-        display: none;
-    }
-
-    #primary-menu label {
-        display: none;
-    }
-
-    #primary-menu input {
-        display: none;
-        border: none;
-        outline: none;
-        border-radius: 2rem;
-        padding-block: 0.38rem;
-        text-indent: 0.8rem;
-
-        width: 23rem; /* Mantendo o tamanho grande em telas maiores */
-        transition: transform 0.3s ease-in-out; /* Animação suave */
-    }
-}
-
 header {
-    padding-block: 2rem;
+    padding-block: 1rem;
     font: var(--text-md);
 }
 
 #profile {
     display: flex;
-    gap: 2rem;
-    flex-flow: row nowrap;
-}
-
-#profile img {
-    width: 11rem;
-    height: 11rem;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-#profile > div {
-    max-width: 24rem; /* 384px */
+    gap: 1rem;
 }
 
 #profile h1 {
-    font: var(--text-lg);
+    font: bold 1.3rem/1.25 var(--font-family);
     color: var(--text-color-primary);
-    margin-bottom: 0.5rem;
+}
+
+#profile p {
+    display: none;
 }
 
 #info {
-    list-style: none;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 #info li {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: .5rem;
+}
+
+@media (width <= 40.625em) {
+    header .container {
+        margin-bottom: 1rem;
+    }
+
+    #profile {
+        position: relative;
+    }
+
+    #profile img {
+        width: 9rem;
+        height: 9rem;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
+    #info {
+        flex-direction: column;
+
+        position: absolute;
+        top: 8rem;
+        left: 11.5rem; 
+    }
+}
+
+@media (40.625em < width < 62em) {
+    header .container {
+        margin-bottom: 1rem;
+    }
+
+    #profile {
+        gap: 2.5rem;
+        position: relative;
+    }
+
+    #profile h1 {
+        font: var(--text-lg);
+        margin-bottom: 0.5rem;
+    }
+
+    #profile img {
+        width: 10rem;
+        height: 10rem;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
+    #profile div p:nth-child(2) {
+        display: block;
+        max-width: 20rem;
+    }
+
+    #info {
+        font: var(--text-sm);
+        position: absolute;
+        top: 13rem;
+        left: 13.8rem; 
+    }
+}
+
+@media (width >= 62em) {
+    header {
+        padding-block: 2rem;
+    }
+
+    header .container {
+        display: flex;
+        justify-content: space-between;
+        align-items:  center;
+    }
+
+    #profile {
+        gap: 2rem;
+        align-items: center;
+    }
+
+    #profile > div {
+        max-width: 24rem;
+    }
+
+    #profile h1 {
+        font: var(--text-lg);
+        margin-bottom: 0.5rem;
+    }
+
+    #profile p {
+        display: block;
+    }
+
+    #info {
+        width: 17.5rem;
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
