--- a/travelgram/styles/main.css
+++ b/travelgram/styles/main.css
@@ -1,22 +1,32 @@
-@media screen and (min-width: 992px) {
-    main {
-        gap: 1.5rem;
-    }
-
-    main img {
-        width: 17.875rem;
-        height: 17.875rem; /* 286px */
-    }
-}
-
 main {
+    padding-block: 1.5rem;
+    
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem;
     justify-content: center;
-
-    padding-block: 1.5rem;
 }
 
 main img {
+    width: 9rem;
+    height: 9rem;
     object-fit: cover;
+}
+
+@media (23.4375em < width < 40.625em) {
+    main img {
+        width: 13rem;
+        height: 13rem;
+    }
+}
+
+@media (width >= 40.625em) {
+    main {
+        gap: 1.5rem;
+    }
+    
+    main img {
+        width: 17.875rem;
+        height: 17.875rem;
+    }
 }
