--- a/travelgram/styles/footer.css
+++ b/travelgram/styles/footer.css
@@ -6,6 +6,8 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
+
+    font: 0.875rem/150% var(--font-family);
 }
 
 @media (width >= 36.225em) {
