--- a/formulario-de-convite/styles/fields/input.css
+++ b/formulario-de-convite/styles/fields/input.css
@@ -71,34 +71,14 @@ input[type="radio"] {
     border: 1px solid var(--input-placeholder);
 }
 
-.radio-box div.image,
-.radio-box input[type="radio"]:checked ~ div.image {
-    width: 1.2rem;
-    height: 1.2rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    transition: background-image 0.3s ease;
-}
-
 .radio-box input[type="radio"]:checked ~ span {
     color: var(--text-heading);
 }
 
-.presential div.image {
-    background-image: url(../../assets/icons/presencial.svg);
-}
-
-.presential input[type="radio"]:checked ~ div.image {
-    background-image: url(../../assets/icons/presencial-hover.svg);
-}
-
-.online div.image {
-    background-image: url(../../assets/icons/video.svg);
-}
-
-.online input[type="radio"]:checked ~ div.image {
-    background-image: url(../../assets/icons/video-hover.svg);
+.online input[type="radio"]:checked ~ div.image svg path,
+.presential input[type="radio"]:checked ~ div.image svg path {
+   stroke: var(--brand-light);
+   transition: background-image 0.3s ease;
 }
 
 .radio-box:hover {
