--- a/formulario-de-matricula/styles/fields/droparea.css
+++ b/formulario-de-matricula/styles/fields/droparea.css
@@ -16,7 +16,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    inset: 0;
+    inset: 0; /* alinha no top e na esquerda */
     opacity: 0;
 }
 
@@ -30,12 +30,14 @@
     background-color: var(--surface-secondary);
 }
 
+/* configuração para que a cor do svg mude, quando o mouse passar em cima */
 .dropzone:hover svg path,
 .dropzone:has(input:focus) svg path{
     stroke: var(--stroke-highlight);
 }
 
-.dropzone p:hover, 
-.dropzone:has(input:focus) p:hover {
+.dropzone:hover p, 
+.dropzone:has(input:focus) p {
     color: var(--text-tertiary);
 }
+
