--- a/formulario-de-matricula/styles/fields/input.css
+++ b/formulario-de-matricula/styles/fields/input.css
@@ -7,7 +7,6 @@ input, textarea, select {
     outline: 1px solid var(--stroke-default);
 
     padding: .75rem 1rem;
-
     font: var(--text);
 }
 
@@ -22,39 +21,32 @@ label {
 input:focus,
 select:focus,
 textarea:focus,
-input[type="date"]:focus-within {
+input[type="date"]:focus-within /* pesquisa se algum elemento está em focu */{
     outline: .25rem solid var(--surface-secondary);
     border-color: var(--stroke-highlight);
-    outline-offset: .1px;
+
+    outline-offset: .1px; /* comando usado para aparecer a borda no Safari */
 }
 
 input[type="date"] {
     position: relative;
-
-    min-width: 100%; /* Garante que ele sempre ocupe o mesmo espaço */
-    padding: 0.75rem 1rem;
-    font: inherit;
-    color: var(--text-primary);
-    border: 2px solid transparent;
-    outline: 1px solid var(--stroke-default);
-    border-radius: .5rem;
-    background: var(--surface-primary);
 }
 
-
+/* esconde o ícone de calendário no Safari */
 input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
 }
 
 input[type="date"]::before {
-    content: "";
+    content: ""; /* cria um elemento */
     position: absolute;
+    /* substitui o ícone por outro */
     background: url(../../assets/icons/calendar-03.svg) center/contain;
-    right: 1rem;
     width: 1.25rem;
     height: 1.25rem;
-
+    right: 1rem;
     top: 50%;
+
     transform: translateY(-50%);
 }
 
@@ -62,7 +54,7 @@ select {
     background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
 }
 
-.address .flex{
+.address .flex {
     gap: 1.25rem;
 }
 
@@ -77,6 +69,7 @@ input[disabled] {
     color: var(--text-primary);
 }
 
+/* quando colocar required */
 input:invalid {
     border: 0.125rem solid var(--semantic-error);
 }
@@ -99,6 +92,13 @@ input[required] + .error {
     margin-top: .25rem;
 }
 
+/* não está em foco e se está válido, tira a mensagem de erro */
 input:not(:focus):valid + .error {
     display: none;
+}
+
+@media (width < 80em) {
+    .address .flex {
+        flex-direction: column;
+    }
 }
