--- a/formulario-de-matricula/styles/forms.css
+++ b/formulario-de-matricula/styles/forms.css
@@ -13,7 +13,7 @@ fieldset {
 
 legend {
     font: 600 1rem/1.25 var(--font-family);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.25rem;
 }
 
 /* qdo tiver um fieldset, e anterior a ele outro fieldset*/
@@ -25,4 +25,10 @@ fieldset + fieldset {
     margin-top: 3rem;
     display: flex;
     gap: 1rem;
+}
+
+@media (width >= 80em) {
+    legend {
+        margin-bottom: 1.5rem;
+    }
 }
