--- a/formulario-de-matricula/styles/fields/input.css
+++ b/formulario-de-matricula/styles/fields/input.css
@@ -30,6 +30,15 @@ input[type="date"]:focus-within /* pesquisa se algum elemento está em focu */{
 
 input[type="date"] {
     position: relative;
+
+    min-width: 100%; /* Garante que ele sempre ocupe o mesmo espaço */
+    padding: 0.75rem 1rem;
+    font: inherit;
+    color: var(--text-primary);
+    border: 2px solid transparent;
+    outline: 1px solid var(--stroke-default);
+    border-radius: .5rem;
+    background: var(--surface-primary);
 }
 
 /* esconde o ícone de calendário no Safari */
