--- a/formulario-de-convite/styles/fields/contact.css
+++ b/formulario-de-convite/styles/fields/contact.css
@@ -1,3 +1,5 @@
+/* Dados para contato */
+
 input[required] + .error {
     display: flex;
     align-items: center;
@@ -21,10 +23,23 @@ input:not(:focus):valid + .error {
     height: 1rem;
 }
 
+/* Termos e Privacidade - checkbox */
+
 .terms-container legend {
     width: 100%;
     height: 1px;
     background-color: var(--input-stroke);
+}
+
+.terms-inner label {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    cursor: pointer;
+}
+
+.terms-inner span {
+    color: var(--brand-light);
 }
 
 .terms-inner {
@@ -33,7 +48,7 @@ input:not(:focus):valid + .error {
 
 .terms-inner input {
     appearance: none;
-
+    
     width: 1.25rem;
     height: 1.25rem;
     border: 1px solid var(--input-stroke);
@@ -60,9 +75,8 @@ input:not(:focus):valid + .error {
     transform: rotate(45deg);
 }
 
-.terms-inner span {
-    color: var(--brand-light);
-}
+
+/* Botão */
 
 .button-container button {
     width: 11.0625rem;
